--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="mymdb.png" />
+    <link rel="icon" type="image/png" href="/mymdb.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="noindex,nofollow" />
     <title>MyMDb</title>
   </head>
   <body>
