--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/png" href="/mymdb.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex,nofollow" />
+    <meta name="color-scheme" content="dark light" />
     <title>MyMDb</title>
   </head>
   <body>
