--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/mymdb.png" />
+    <link rel="icon" type="image/png" href="/icon-bgless.png" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex,nofollow" />
     <meta name="color-scheme" content="dark light" />
-    <title>MyMDb</title>
+    <title>RedPanda</title>
   </head>
   <body>
     <div id="root">
